--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To HomePage</h1>
+	<h1>Welcome to the Devops B15 Batch</h1>
 	<h1>HomePage</h1>
 	<div id="smallcont">
 		<div></div>
